# gemini-rag-demo

./: .gitignore  README.md  app.py  app_oop.py  pyproject.toml  rag_langchain.ipynb  requirements.txt
.devcontainer/: devcontainer.json
