[tool.poetry]
name = "gemini-rag-demo"
version = "0.1.0"
description = ""
authors = ["Archiruz <evazerblyre@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
langchain-google-genai = "^2.0.6"
langchain-community = "^0.3.8"
pypdf = "^5.1.0"
nltk = "^3.9.1"
chromadb = "^0.5.20"
streamlit = "^1.40.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
